--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "binary-split": "^1.0.5",
+    "bluebird": "^3.7.2",
     "deep-parse-json": "^1.0.1",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
